src/test/resources/typeSystemTestModels/invalid/statements/WhileConditionHasBooleanType.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.statements;

public class WhileConditionHasBooleanType {
  public void test(){
    while (1) {

    }
  }
}
